...
    <string name="read_aloud_from_here">Read from here</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="text_return">Back</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="set_timer">Timer</string>
    <string name="read_aloud_pause">Speak Paused</string>
...
    <string name="download_count">Downloaded %1$d/%2$d</string>
    <string name="import_select_book">Import selected book(s)</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="change_icon">Change icon</string>
    <string name="remove_from_bookshelf">Remove</string>
    <string name="start_read">Start reading</string>
    <string name="data_loading">Loading…</string>
    <string name="load_error_retry">Load failed, tap to retry</string>
    <string name="book_intro">Book description</string>
    <string name="book_intro_expand">Expand</string>
    <string name="book_intro_collapse">Collapse</string>
    <string name="intro_show">Description:%s</string>
    <string name="intro_show_null">Description: no introduction</string>
...
    <string name="scope_content">Act on the content</string>
    <string name="join_qq_channel">Join QQ channel</string>
    <string name="qq_channel_summary">点击加入阅读QQ频道</string>
    <string name="menu_refresh_dur">Refresh the current chapter</string>
    <string name="menu_refresh_after">Refresh the chapter after</string>
    <string name="menu_refresh_all">Refresh all chapters</string>
    <string name="menu_refresh_resources">Refresh all data</string>
    <string name="edit_content">Edit Content</string>
    <string name="chapter_change_source">Single chapter source switching</string>
    <string name="batch_chapter_change_source">Batch chapter source switching</string>
    <string name="chapter_source_skip">Skip chapter</string>
    <string name="chapter_source_cache_next">Cache and next</string>
    <string name="chapter_source_selected_count">%1$d target chapter(s) selected</string>
...
